<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.archutils</groupId>
    <artifactId>arch-utils</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <name>Arch Utils</name>
    <description>Architecture utilities application with Swing UI</description>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.archutils.Main</mainClass>
                        </manifest>
                    </archive>
                    <finalName>arch-utils</finalName>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
